Fix overflow-x

--- a/site.css
+++ b/site.css
@@ -3,6 +3,7 @@ body {
     color: #fff !important;
     background-color: #000;
     font-size: 1.2em;
+    overflow-x: none;
 }
 
 html, body {
